<resources>
    <string name="app_name">Second Api Project</string>
    <string name="title_activity_register">RegisterActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="logout">Logout</string>
    <string name="add_task">Add Task</string>
    <string name="update_task">Update Task</string>
    <string name="welcome_back">Welcome Back…</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">login</string>
    <string name="don_t_have_account">Don\'t have account</string>
    <string name="create_now">Create Now!</string>
    <string name="create_new_account">Create New Account</string>
    <string name="enter_new_account_details">Enter new account details</string>
    <string name="name">Name</string>
    <string name="register_email">Email</string>
    <string name="register_password">Password</string>
    <string name="male" translatable="false">Male</string>
    <string name="female" translatable="false">Female</string>
    <string name="register_now">Register Now</string>
    <string name="new_title">New Title</string>
    <string name="update">Update</string>
    <string name="task_title">Task Title</string>
    <string name="add">Add</string>
    <string name="toast_enter_data">Enter Required Data</string>
    <string name="toast_enter_email">Enter Email</string>
    <string name="toast_enter_password">Enter Password</string>
    <string name="toast_new_title">Enter New Title</string>
    <string name="toast_enter_title">Please Enter Title</string>
    <string name="tasks">Tasks</string>
    <string name="toast_no_internet">NO Internet Connection</string>
    <string name="images">Images</string>
</resources>