<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/to_countries"
        android:icon="@drawable/ic_countries"
        android:title="Categories"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/to_tasks"
        android:icon="@drawable/ic_tasks"
        android:title="@string/tasks"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/log_out"
        android:icon="@drawable/ic_login_out"
        android:title="@string/logout"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/to_images"
        android:icon="@drawable/ic_upload"
        android:title="@string/images"
        app:showAsAction="ifRoom" />


</menu>